# confmaster

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  config.json  example.cpp
include/confmaster/: confmaster.hpp
src/: confmaster.cpp
